--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="css/responsive.css">
  
   <link rel="stylesheet" href="css/style.css.map">
-  <title>Ventana Modal</title>
+  <link rel="shortcut icon" href="https://www.zarla.com/images/zarla-lana-no-1x1-2400x2400-20220216-dqcf97pxytj4p4j9xfcc.png?crop=1:1,smart&width=250&dpr=2" type="">
+  <title> Artesania Guaviare </title>
 </head>
 <body style="background-color: #222831;">
   <div id="modal" class="modal">
