--- a/contactos.html
+++ b/contactos.html
@@ -12,8 +12,9 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
-
-  <title></title>
+ <link rel="shortcut icon" href="https://www.zarla.com/images/zarla-lana-no-1x1-2400x2400-20220216-dqcf97pxytj4p4j9xfcc.png?crop=1:1,smart&width=250&dpr=2" type="">
+  
+ <title> Artesania Guaviare </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
