--- a/tienda.html
+++ b/tienda.html
@@ -13,7 +13,8 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Feane </title>
+  <link rel="shortcut icon" href="https://www.zarla.com/images/zarla-lana-no-1x1-2400x2400-20220216-dqcf97pxytj4p4j9xfcc.png?crop=1:1,smart&width=250&dpr=2" type="">
+ <title> Artesania Guaviare </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
